--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
-<header class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
-
-    <div class="flex items-center justify-between mb-4 md:mb-0">
-      <h1 class="leading-none text-2xl text-grey-darkest">
-        <a class="no-underline text-grey-darkest hover:text-black" href="#">
-          Visualizzazione Mezzi
-        </a>
-      </h1>
-      </div>  
-  
-  </header>
-<router-outlet></router-outlet>
+<div class="p-4">
+  <router-outlet></router-outlet>
+</div>
