--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,25 +1,2 @@
-<app-datatable></app-datatable>
-
-  <!-- <div class="modal-dialog modal-dialog-centered" *ngIf="mostraDialog">
-    <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Dati sensore del mezzo: {{denMezzo}}</h5>
-          <button type="button" class="btn-close" aria-label="Close" (click)="chiudiDialog()"></button>
-        </div>
-        <div class="modal-body">
-            <table class="table table-striped" *ngIf="datiSensore != undefined">
-                <thead>
-                  <tr>
-                    <th *ngFor="let th of titoliSensore">{{th.label}}</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td *ngFor="let th of titoliSensore">{{datiSensore[th.name]}}</td>
-                  </tr>
-                </tbody>
-            </table>
-            <span *ngIf="datiSensore == undefined">Nessun dato del sensore presente</span>
-        </div>
-      </div>
-  </div> -->
+<h1 class="mb-4 text-lg font-semibold">Visualizzazione viaggi</h1>
+<app-datatable [options]="options" [lista]="lista" (onSelect)="select($event)"></app-datatable>
